Changed main font to verdana

--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,5 +1,9 @@
 ﻿@inherits LayoutComponentBase
 <style>
+    body {
+        font-family: Verdana, Geneva, sans-serif;
+        font-size: 14px;
+    }
     .navbar-nav .nav-link:hover {
         font-weight: bold;
         transition: font-weight 0.2s;
