--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using EventEaseApp.Models
 @inject EventEaseApp.Services.EventService EventService
+@inject NavigationManager Navigation
 
 <h3>Register For Event</h3>
 <EditForm Model="attendee" OnValidSubmit="HandleRegister">
@@ -52,6 +53,9 @@
 }
 
 @code {
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public int? eventId { get; set; }
     private Attendee attendee = new Attendee {
         Name = string.Empty,
         Address = string.Empty,
@@ -61,6 +65,14 @@
         EventIds = Array.Empty<int>()
     };
     private string? successMessage;
+
+    protected override void OnInitialized()
+    {
+        if (eventId.HasValue && eventId.Value > 0)
+        {
+            attendee.EventIds = new int[] { eventId.Value };
+        }
+    }
 
     private void HandleRegister()
     {
