--- a/Pages/Events.razor
+++ b/Pages/Events.razor
@@ -8,8 +8,13 @@
 @inject IJSRuntime JS
 
 <h3>Events List</h3>
+<div>
+    <button class="btn btn-outline-secondary btn-sm me-2" @onclick="PrevPage" disabled="@(currentPage == 1)">Prev</button>
+    <span>Page @currentPage of @totalPages</span>
+    <button class="btn btn-outline-secondary btn-sm ms-2" @onclick="NextPage" disabled="@(currentPage == totalPages)">Next</button>
+</div>
 <ul class="list-group">
-    @foreach (var evt in EventService.Events)
+    @foreach (var evt in pagedEvents)
     {
         <li class="list-group-item">
             <img src="@evt.ImageUrl" alt="@evt.Name thumbnail" width="200" height="100" style="object-fit:cover; margin-right:10px; vertical-align:middle;" />
@@ -72,12 +77,27 @@
     </div>
 }
 
-@if (errorMessage != null)
-{
-    <div class="alert alert-danger mt-3">@errorMessage</div>
-}
-
 @code {
+    private int currentPage = 1;
+    private int pageSize = 3;
+    private int totalPages => (int)Math.Ceiling((double)EventService.Events.Count / pageSize);
+    private List<Event> pagedEvents => EventService.Events.Skip((currentPage - 1) * pageSize).Take(pageSize).ToList();
+
+    private void PrevPage()
+    {
+        if (currentPage > 1)
+        {
+            currentPage--;
+        }
+    }
+
+    private void NextPage()
+    {
+        if (currentPage < totalPages)
+        {
+            currentPage++;
+        }
+    }
     private Event? editingEvent;
     private string? errorMessage;
 
