Improved title and added paging to home page

--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -11,7 +11,8 @@
 </style>
 <div class="page">
     <main>
-        <div class="top-row px-4" style="background-color: Orange">
+        <div style="background-color: Orange; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 10px 0;">
+            <span style="font-weight:bold; font-size:2rem;">Event Ease Application - Sample coding project</span>
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
