--- a/Pages/AddEvent.razor
+++ b/Pages/AddEvent.razor
@@ -6,7 +6,7 @@
 @inject EventEaseApp.Services.EventService EventService
 
 <h3>Add New Event</h3>
-<EditForm Model="newEvent" OnValidSubmit="HandleAddEvent">
+<EditForm Model="newEvent" OnValidSubmit="HandleAddEvent" style="width:50vw; margin:0 auto;">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <div class="mb-3">
