--- a/Pages/Help.razor
+++ b/Pages/Help.razor
@@ -1,6 +1,6 @@
 @page "/help"
 
-<h3>Help &amp; User Guide</h3>
+<h3 style="color: darkmagenta;">Help &amp; User Guide</h3>
 <p>
     Welcome to the Event Ease Application! This webapp lets you manage and register for events easily. Here’s how it works:
 </p>
