--- a/Pages/Events.razor
+++ b/Pages/Events.razor
@@ -1,13 +1,12 @@
 @page "/events"
 @using EventEaseApp.Models
-@using EventEaseApp.Components
 @using EventEaseApp.Services
 @inject EventService EventService
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
 @inject HttpClient Http
 @inject IJSRuntime JS
 
-<h3>Events List</h3>
+<h3 style="color: darkmagenta;">Events List</h3>
 <div>
     <button class="btn btn-outline-secondary btn-sm me-2" @onclick="PrevPage" disabled="@(currentPage == 1)">Prev</button>
     <span>Page @currentPage of @totalPages</span>
