--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -5,8 +5,8 @@
 @inject EventEaseApp.Services.EventService EventService
 @inject NavigationManager Navigation
 
-<h3>Register For Event</h3>
-<EditForm Model="attendee" OnValidSubmit="HandleRegister" style="width:50vw; height:70vh; margin:0 auto; padding-bottom:60px; overflow:hidden;">
+<h3 style="color: darkmagenta;">Register For Event</h3>
+<EditForm Model="attendee" OnValidSubmit="HandleRegister" style="width:50vw; height:70vh; margin:0 auto; padding-bottom:60px; overflow-y:auto;">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <div class="mb-3">
@@ -35,7 +35,7 @@
         <ValidationMessage For="() => attendee.Country" />
     </div>
     <div class="mb-3">
-        <label class="form-label">Events</label>
+        <label class="form-label">Events You can control-click multiple events</label>
         <select multiple class="form-control" @onchange="OnEventSelectionChanged">
             @foreach (var evt in EventService.Events)
             {
